--- a/src/main/resources/templates/anagraficaEvento/anagraficaFragment.html
+++ b/src/main/resources/templates/anagraficaEvento/anagraficaFragment.html
@@ -56,7 +56,7 @@
 								<label class="control-label col-md-4 col-sm-4 col-xs-12"
 									for="codiceFiscale_anagrafica"><span th:text="#{label.codice_fiscale}">codice_fiscale</span> <span	class="required">*</span></label>
 								<div class="col-md-4 col-sm-4 col-xs-12">
-									<input id="codiceFiscale_anagrafica" name="codiceFiscale_anagrafica" disabled="disabled"
+									<input id="codiceFiscale_anagrafica" name="codiceFiscale_anagrafica"
 										required="required"	class="form-control col-md-7 col-xs-12"
 										type="text" th:field="${anagraficaEventoWrapper.anagraficaEvento.anagrafica.codiceFiscale}" />
 								</div>
