--- a/src/main/resources/templates/provider/providerList.html
+++ b/src/main/resources/templates/provider/providerList.html
@@ -216,10 +216,9 @@
 										<a th:href="@{|/provider/${provider.id}/pianoFormativo/list|}" class="btn btn-primary min-icon-width" th:title="#{label.pfa_provider}"><i class="fa fa-calendar-o"> </i></a>
 										<a th:href="@{|/provider/${provider.id}/relazioneAnnuale/list|}" class="btn btn-primary min-icon-width" th:title="#{label.relazione_annuale_provider}"><i class="fa fa-file-text"> </i></a>
 										<a th:href="@{|/provider/${provider.id}/pagamento/list|}" class="btn btn-primary min-icon-width" th:title="#{label.contributo_annuale_provider}"><i class="fa fa-euro"> </i></a>
-										<button type="button" class="btn btn-primary min-icon-width" th:onclick="${'openModalImpostazioni('+provider.id+', '+provider.canInsertPianoFormativo+', '
-											+provider.canInsertEvento+', '+provider.canInsertAccreditamentoStandard+', '
-											+provider.canInsertRelazioneAnnuale+', &apos;'__${provider.status}__'&apos;, '
-											+provider.dataScadenzaInsertPianoFormativo+', '+provider.dataScadenzaInsertAccreditamentoStandard+', '+provider.dataScadenzaInsertRelazioneAnnuale+')'}" th:title="#{label.abilita}"><i class="fa fa-unlock-alt"> </i></button>
+										<button type="button" class="btn btn-primary min-icon-width" th:onclick="|openModalImpostazioni(${provider.id}, ${provider.canInsertPianoFormativo}, ${provider.canInsertEvento},
+											${provider.canInsertAccreditamentoStandard}, ${provider.canInsertRelazioneAnnuale}, '${provider.status}', '${provider.dataScadenzaInsertPianoFormativo}', '${provider.dataScadenzaInsertAccreditamentoStandard}',
+											'${provider.dataScadenzaInsertRelazioneAnnuale}')|" th:title="#{label.abilita}"><i class="fa fa-unlock-alt"> </i></button>
 									</td>
 								</tr>
 							</tbody>
@@ -264,7 +263,7 @@
 
 			    function openModalImpostazioni(idProvider,
 						canInsertPF, canInsertEventi, canInsertDomanda, canInsertRelazione,
-						status) {
+						status, dataPF, dataDomanda, dataRelazione) {
 					cleanForm();
 					//action
 					$("#scadenze-provider").modal("show");
@@ -288,9 +287,17 @@
 					else
 						$("#radioRelazione-No").iCheck("check")
 					//status del provider
-					console.log(status);
 					$("#statoSelect").val(status);
 					$("#statoSelect").selectpicker("refresh");
+					//gestione date
+					//parse + format
+					var dataScadenzaPF = moment(dataPF, "YYYY-MM-DD", true).format("DD/MM/YYYY");
+					var dataScadenzaDomanda = moment(dataDomanda, "YYYY-MM-DD", true).format("DD/MM/YYYY");
+					var dataScadenzaRelazione = moment(dataRelazione, "YYYY-MM-DD", true).format("DD/MM/YYYY");
+					$("#dataPF").val(dataScadenzaPF);
+					$("#dataDomanda").val(dataScadenzaDomanda);
+					$("#dataRelazioneAnnuale").val(dataScadenzaRelazione);
+
 
 				}
 
@@ -303,6 +310,10 @@
 					})
 					$("#statoSelect").val("");
 					$("#statoSelect").selectpicker("refresh");
+					$('input.data').each(function(i,d) {
+						$d = $(d);
+						$d.val("");
+					})
 				}
 
 			/*]]>*/
