--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1023,6 +1023,8 @@ h2 {
 	min-height: 350px;
 	resize: none;
 	margin-bottom: 20px;
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
 .fixed-value {
